--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,11 @@
 .Rhistory
 .Rapp.history
 
+# R Data Storage
+.RData
+
 # Example code in package build process
 *-Ex.R
 
 # RStudio files
 .Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
